crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_empty_store_with_filter_input_120x40.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                                                                     "
"╭ Events [*] ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│#     Time^           Origin                        Protocol    Dir  Summary                                          │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"┌ Decode ──────────────────────────────────────┐┌ Hex Dump ────────────────────────────────────────────────────────────┐"
"│  Select an event above to see decoded layers ││  Select an event to view raw bytes                                   │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Load a capture to see time distribution                                                                             │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 0 events │                                                         Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
