crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_export_dialog_120x40.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                                                                     "
"╭ Events [*] ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│#     Time^           Source                      Destination                 Protocol    Dir  Summary                │"
"│    1 00:00:01.000    10.0.0.1:1234               10.0.0.2:5678               gRPC        ←                           │"
"│    2 00:00:02.000    10.0.0.1:1234               10.0.0.2:5678               gRPC        ←                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                  ┌ Export ────────────────────────────────────────┐                                  │"
"│                                  │> JSON (single event)                           │                                  │"
"│                                  │  JSON (all filtered: 2)                        │                                  │"
"│                                  │  CSV (all filtered: 2)                         │                                  │"
"│                                  │  HAR (gRPC conversations)                      │                                  │"
"│                                  │  OTLP (OpenTelemetry)                          │                                  │"
"╰──────────────────────────────────│  HTML (report)                                 │──────────────────────────────────╯"
"┌ Decode ──────────────────────────│                                                │──────────────────────────────────┐"
"│  Timestamp: 00:00:01.000         │Output: ./export.json                           │0 43                    Hello gRPC│"
"│  Direction: inbound              │                                                │                                  │"
"│▶ Source                          │Enter: export  Tab: edit path  Esc: cancel      │                                  │"
"│  Transport: gRPC                 │                                                │                                  │"
"│▶ Payload (10 bytes)              │                                                │                                  │"
"│                                  │                                                │                                  │"
"│                                  └────────────────────────────────────────────────┘                                  │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│gRPC                                                                                                                  │"
"│█                                                                                                                    █│"
"│ 00:00:01.000 --- 00:00:02.000  gRPC: 2                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 2 events │ gRPC: 2                                                 Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
