crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_goto_event_mode_120x40.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                                                                     "
"╭ Events [*] ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│#     Time^           Source                      Destination                 Protocol    Dir  Summary                │"
"│    1 00:00:01.000    10.0.0.1:1234               10.0.0.2:5678               gRPC        ←                           │"
"│    2 00:00:02.000    10.0.0.1:1234               10.0.0.2:5678               gRPC        ←                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰─────────────────────────────────────────────────┌ Jump to Event ──┐──────────────────────────────────────────────────╯"
"┌ Decode ──────────────────────────────────────┐┌ │Go to event #:   │──────────────────────────────────────────────────┐"
"│  Timestamp: 00:00:01.000                     ││0└─────────────────┘c 6f 20 67 52  50 43                    Hello gRPC│"
"│  Direction: inbound                          ││                                                                      │"
"│▶ Source                                      ││                                                                      │"
"│  Transport: gRPC                             ││                                                                      │"
"│▶ Payload (10 bytes)                          ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│gRPC                                                                                                                  │"
"│█                                                                                                                    █│"
"│ 00:00:01.000 --- 00:00:02.000  gRPC: 2                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 2 events │ gRPC: 2                                                 Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
