crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_help_overlay_120x40.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                                                                     "
"╭ Events [*] ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│#     Time^        Source             Destination        Protocol   Dir Summary                                       │"
"│    1 00:00:01.000 10.0.0.1:1234      10.0.0.2:5678      gRPC       ←                                                 │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                  ┌ Help (j/k to scroll, ? to close) ──────────────┐                                  │"
"│                                  │Global                                          │                                  │"
"│                                  │  Tab / Shift+Tab   Cycle panes                 │                                  │"
"│                                  │  /                 Open filter bar             │                                  │"
"│                                  │  Esc               Clear filter                │                                  │"
"│                                  │  ?                 Toggle help                 │                                  │"
"│                                  │  q / Ctrl+C        Quit                        │                                  │"
"│                                  │  :                 Command palette             │                                  │"
"│                                  │                                                │                                  │"
"╰──────────────────────────────────│Event List                                      │──────────────────────────────────╯"
"┌ Decode ──────────────────────────│  j/k ↑/↓           Navigate events             │──────────────────────────────────┐"
"│  Timestamp: 00:00:01.000         │  g / Home          First event                 │0 43                    Hello gRPC│"
"│  Direction: inbound              │  G / End           Last event                  │                                  │"
"│▶ Source                          │  PgDn / PgUp       Page up/down                │                                  │"
"│  Transport: gRPC                 │                                                │                                  │"
"│▶ Payload (10 bytes)              │Decode Tree                                     │                                  │"
"│                                  │  j/k ↑/↓           Navigate nodes              │                                  │"
"│                                  │  Enter / →         Expand                      │                                  │"
"│                                  │  Backspace / ←     Collapse                    │                                  │"
"│                                  │  Space             Toggle                      │                                  │"
"│                                  │                                                │                                  │"
"│                                  └────────────────────────────────────────────────┘                                  │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│gRPC                                                                                                                  │"
"│█                                                                                                                     │"
"│ 00:00:01.000 --- 00:00:01.000  gRPC: 1                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 1 events │ gRPC: 1                                                 Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
