crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_help_overlay_80x24.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                             "
"╭ Events [*] ──────────────────────────────────────────────────────────────────╮"
"│#     Time^   ┌ Help (j/k to scroll, ? to close) ──────────────┐ol    Dir  ...│"
"│    1 00:00:01│Global                                          │      ←       │"
"│              │  Tab / Shift+Tab   Cycle panes                 │              │"
"│              │  /                 Open filter bar             │              │"
"│              │  Esc               Clear filter                │              │"
"│              │  ?                 Toggle help                 │              │"
"│              │  q / Ctrl+C        Quit                        │              │"
"╰──────────────│  :                 Command palette             │──────────────╯"
"┌ Decode ──────│                                                │──────────────┐"
"│  Timestamp: 0│Event List                                      │2  50 43      │"
"│  Direction: i│  j/k ↑/↓           Navigate events             │              │"
"│▶ Source      │  g / Home          First event                 │              │"
"│  Transport: g│  G / End           Last event                  │              │"
"│▶ Payload (10 │  PgDn / PgUp       Page up/down                │              │"
"│              │                                                │              │"
"└──────────────│Decode Tree                                     │──────────────┘"
"┌ Timeline ────│  j/k ↑/↓           Navigate nodes              │──────────────┐"
"│gRPC          │  Enter / →         Expand                      │              │"
"│█             │  Backspace / ←     Collapse                    │              │"
"│ 00:00:01.000 └────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" 1 events │ gRPC: 1         Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
